# RustInAction

./: .gitignore
Chapter1/csv-penguins/: Cargo.toml
Chapter1/csv-penguins/src/: main.rs
Chapter1/different-integers/: Cargo.toml
Chapter2/mandelbrot/src/: main.rs
Chapter2/mini-grep/: Cargo.toml
Chapter2/mini-grep/src/: main.rs
Chapter3/file/doc/: search-index.js
Chapter3/file/src/: main.rs
Chapter4/cube_sat/: Cargo.toml
Chapter4/cube_sat/src/: main.rs
Chapter5/: Chapter5.ipynb
Chapter5/.ipynb_checkpoints/: Chapter5-checkpoint.ipynb
Chapter5/cpu_emulator/src/: main.rs
Chapter5/fixed_point/: FixedPointDeconstruction.ipynb
Chapter5/fixed_point/.ipynb_checkpoints/: FixedPointDeconstruction-checkpoint.ipynb
Chapter5/fixed_point/src/: main.rs
Chapter5/floating_points/.ipynb_checkpoints/: FloatingPointDeconstruction-checkpoint.ipynb
Chapter5/floating_points/src/: main.rs
Chapter6/: Chapter6.ipynb  read_mem  read_mem.rs
Chapter6/snow/: Cargo.toml
Chapter6/snow/src/: main.rs
Chapter7/: Chapter7.ipynb
Chapter7/.ipynb_checkpoints/: Chapter7-checkpoint.ipynb
Chapter7/actionkv/: Cargo.toml
Chapter7/actionkv/src/: akv_mem.rs  lib.rs
Chapter7/hash_initializer/: Cargo.toml
Chapter7/hash_initializer/src/: main.rs
Chapter7/serialize_to_multiple/: Cargo.toml
Chapter8/dns_resolve/: Cargo.toml
Chapter8/enchanter_rpg/: Cargo.toml
Chapter8/mget/: Cargo.toml  virtual_network_device
Chapter8/mget/src/: dns.rs  http.rs  main.rs
Chapter8/reqwest/: Cargo.toml
Chapter8/tcp_stream/: Cargo.toml
Chapter9/clock/: Cargo.toml
(+23 files in other folders)
